# instruct-minnig

./: README.md  pyproject.toml
instruct_mining/: utils.py
instruct_mining/data_pipeline/: __init__.py  data_loader.py  data_standardization.py  process.py
instruct_mining/quality_metrics/: __init__.py  evaluator.py  knn6.py  len.py  reward_score.py
