[tool.poetry]
name = "instruct-minnig"
version = "0.1.0"
description = ""
authors = ["nutorbit <nutorbitx@gmail.com>"]
readme = "README.md"
packages = [{include = "instruct_minnig"}]

[tool.poetry.dependencies]
python = ">=3.8.10, <4"
pythainlp = "^4.0.2"
numpy = "^1.23.5"
tqdm = "^4.66.1"
datasets = "^2.14.4"
regex = "^2023.8.8"
ftfy = "^6.1.1"
transformers = "^4.33.0"
torch = "^2.0.1"
trl = "^0.7.1"
peft = "^0.5.0"
sentencepiece = "^0.1.99"
protobuf = "^4.24.3"
rouge-score = "^0.1.2"
nltk = "^3.8.1"
py7zr = "^0.20.6"
evaluate = "^0.4.0"
prettytable = "^3.9.0"
pynndescent = "^0.5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
